src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ------------------------------------------------------------------------- */

.fancyjustify {
  text-align: justify;

  hyphens: auto;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;

  hyphenate-limit-lines: 2;
  -ms-hyphenate-limit-lines: 2;
  -moz-hyphenate-limit-lines: 2;
  -webkit-hyphenate-limit-lines: 2;

  hyphenate-limit-chars: 4 2 2;
  -ms-hyphenate-limit-chars: 4 2 2;
  -moz-hyphenate-limit-chars: 4 2 2;
  -webkit-hyphenate-limit-chars: 4 2 2;
}

/* ------------------------------------------------------------------------- */

h1, h2, h3, h4, h5, h6 {
  @apply items-center font-bold text-blue-600 dark:text-white;
  &:not(:first-child) { @apply mt-16; }
}
h1 {
  @apply text-4xl mb-8 text-center;
}
h2 {
  @apply text-2xl mb-4;
}
h3 {
  @apply text-xl mb-2;
}
h4, h5, h6 {
  @apply text-lg mb-2;
}

/* ------------------------------------------------------------------------- */

h1 > svg {
  @apply w-12 h-12 mr-3 inline-block;
}
h2 > svg {
  @apply w-8 h-8 mr-3 inline-block;
}
h3 > svg, li > svg, button > svg {
  @apply w-6 h-6 mr-3 inline-block;
}
h4 > svg, h5 > svg, h6 > svg, p > svg, a > svg {
  @apply w-5 h-5 mr-3 inline-block;
}

/* ------------------------------------------------------------------------- */

p, ul, ol {
  &:not(:first-child) { @apply mt-4; }
  &:not(:last-child) { @apply mb-4; }
}

li {
  &:not(:first-child) { @apply mt-2; }
  &:not(:last-child) { @apply mb-2; }
}

/* ------------------------------------------------------------------------- */

p, li {
  @apply fancyjustify;
}
a {
  @apply text-blue-600 hover:underline;
}
button {
  @apply px-5 py-2 mr-4 text-white font-bold rounded-full transition-all duration-300 transform;
  @apply shadow-md bg-gradient-to-r from-green-400 to-blue-500;
  @apply hover:shadow-lg hover:scale-105;
  user-select: none;
}
iframe, img {
  @apply rounded-xl;
}
strong {
  @apply font-bold;
}
code {
  @apply p-1 rounded-lg bg-gray-200;
}

